PHP 4                                                                      NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2002, Version 4.2.2
- Report the right exit code after a call to exit(). (Edin)

13 May 2002, Version 4.2.1
- Added safe-mode checks to show_source(), parse_ini_file() and rmdir(). Also
  fixed security problems with safe_mode_include_dir directive. (Rasmus)
- Changed HTTP upload code to accept 0 byte file uploads. (Zeev)
- Major update of domxml. New functions, better DOM compliance and bug fixes:
  * Changed the old $node->append_child() to $node->append_sibling() since
    the new append_child() behaves correctly (= W3C standard).
  * Added domxml functions:
    . domxml_elem_get_elements_by_tagname() 
    . domxml_doc_get_elements_by_tagname()
    . domxml_doc_get_element_by_id()
    . domxml_elem_remove_attribute()
    . domxml_elem_get_attribute_node()
  * Fixed a segfault in domxml_unlink(). 
  * Added formatting option to domxml_dump_mem(). 
  (Uwe, jtate, Chregu)
- Fixed a bug in socket_select() that could cause unexpected behavior when
  using a statement like $w = $e = array($sock); This change unfortunately
  prevents the use of constant values (e.g. NULL) for the socket array
  paramaters. Instead, use a temporary variable or an expression with the
  leftmost member being a temporary variable. ex.:
  socket_select($w, $r, $e = NULL, 10); (Jason)
- Fixed crashes in the session serializer. (Stas)
- Fixed malformed atime/mtime with touch(). (Yasuo)
- Fixed a couple of bugs in array_sum() and array_merge(). (Andrei)
- Fixed SJIS directory name handling under Windows. (Rui)
- Fixed empty mb_output_handler() output when Content-Type is specified.
  (Yasuo) 
- Fixed the false logic in ext/session which made SID constant not to be
  defined when cookies are disabled. (Sascha)
- Fixed possible crash bug in HTTP uploads. (Patch: Lucas Schroeder)